add favicon and github link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <head>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="display:flex;background-color:">
 
+
+
+
 <div id ="pal" style ="display:block;text-align:center;font-size: 50px;margin:auto auto;">
-<br>
-<p id="email" style="margin:0;font-size:0.4em;">contact@atteniemi.com</p>
-
+	<br>
+	<p id="email" style="margin:0;font-size:0.4em;">contact@atteniemi.com</p>
 </div>
-
+<div id="footer" style="position:fixed;bottom:0%;left:50%;transform: translateX(-50%);font-size:1.2em;margin-bottom:3px;"><a href="https://www.github.com/hur/" style="text-decoration:none;">❤️</a></div>
 <script>
 var palindromes = ["Atte diat otti. Hitto! Taidetta!", "Atte E, mahtavat naisesi antavat hameetta!", "Atte, hupi-Leena piti paneelipuhetta.", 
 "Atte kalusi sulaketta.", "Atte kaluu suulaketta.", "Atte kumiapina panipa imuketta!", "Atte, kuminaa saatte lounaalla. Anu olettaa: 'Saan imuketta!'", "Atte kumiorava, varo imuketta!",
@@ -23,6 +26,5 @@ document.getElementById("pal").insertAdjacentHTML('afterbegin', palindromes[Math
 
 // Palindromes related to my name. That's it.
 </script>
-
 
 </body>
