fix vertical align for firefox & remove css typo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="display:flex;background-color:">
+<body>
 
 
 
-
-<div id ="pal" style ="display:block;text-align:center;font-size: 50px;margin:auto auto;">
+<div id="aligner" style="display:flex;align-items:center;justify-content:center;height:100%;">
+<div id ="pal" style ="max-width:50%;text-align:center;font-size: 50px;">
 	<br>
 	<p id="email" style="margin:0;font-size:0.4em;">contact@atteniemi.com</p>
+</div>
 </div>
 <div id="footer" style="position:fixed;bottom:0%;left:50%;transform: translateX(-50%);font-size:1.2em;margin-bottom:3px;"><a href="https://www.github.com/hur/" style="text-decoration:none;">❤️</a></div>
 <script>
