update background color

--- a/index.html
+++ b/index.html
@@ -1,31 +1,19 @@
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<style>a{text-decoration:none;color:#d36a44};</style>
 </head>
-<body>
+<body style="background-color:#EEEBEA">
 
 
 
 <div id="aligner" style="display:flex;align-items:center;justify-content:center;height:100%;">
-<div id ="pal" style ="max-width:50%;text-align:center;font-size: 50px;">
+<div id ="pal" style ="max-width:50%;text-align:center;font-size: 2em;">
+	Atte Niemi
 	<br>
-	<p id="email" style="margin:0;font-size:0.4em;">contact@atteniemi.com</p>
+	<a href="https://www.linkedin.com/in/atteniemi/">LinkedIn</a>
+	<br>
+	<a href="https://github.com/hur">GitHub</a>
 </div>
 </div>
-<div id="footer" style="position:fixed;bottom:0%;left:50%;transform: translateX(-50%);font-size:1.2em;margin-bottom:3px;"><a href="https://www.github.com/hur/" style="text-decoration:none;">❤️</a></div>
-<script>
-var palindromes = ["Atte diat otti. Hitto! Taidetta!", "Atte E, mahtavat naisesi antavat hameetta!", "Atte, hupi-Leena piti paneelipuhetta.", 
-"Atte kalusi sulaketta.", "Atte kaluu suulaketta.", "Atte kumiapina panipa imuketta!", "Atte, kuminaa saatte lounaalla. Anu olettaa: 'Saan imuketta!'", "Atte kumiorava, varo imuketta!",
- "Atte, noki lepäämättä, jemmaa, reivaa ja jaa vieraamme jättämää pelikonetta!", "Atte S. osittaa motellissa teetassille tomaattisosetta.", "Atte T. saa ruttopotturaastetta.",
- "Atte tuu! Puutetta!", "Atte ulos oluetta!", "Atte vaati, puut iski Mikko, kokki, miksi tuupit aavetta?", "Attee rääkkää Reetta!", "Atte-emo, kato tota: komeetta!", "Atteni atavisti-avustajat suvaitsivat ainetta.",
-"Atte, diat ovat avotaidetta!", "Atte, S.O.S.! Anna sosetta!", "Atte, lappakälyni tiukemman akateeminen imee takanamme kuitin yläkappaletta.", "Ella ja jano tuloo, sinä älykäs Atteni. Aika huikan ööliä sai Taru Ratia säilöön. Aki U haki ainetta Säkylään; iso olut on ajajalle."];
-
-//palindromes.forEach(function(palindrome){
-//    console.log(palindrome)
-//});
-
-document.getElementById("pal").insertAdjacentHTML('afterbegin', palindromes[Math.floor(Math.random() * (palindromes.length - 1))]);
-
-// Palindromes related to my name. That's it.
-</script>
-
+<!--<div id="footer" style="position:fixed;bottom:0%;left:50%;transform: translateX(-50%);font-size:1.2em;margin-bottom:3px;"><a href="https://www.github.com/hur/" style="text-decoration:none;">❤️</a></div>-->
 </body>
